--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,112 +3,112 @@
 /* Nunito Fonts */
 @font-face {
   font-family: "Nunito";
-  src: url("/src/fonts/numito/Nunito-Black.ttf") format("truetype");
+  src: url("/assets/fonts/nunito/Nunito-Black.ttf") format("truetype");
   font-weight: 900;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Nunito";
-  src: url("/src/fonts/numito/Nunito-BlackItalic.ttf") format("truetype");
+  src: url("/assets/fonts/nunito/Nunito-BlackItalic.ttf") format("truetype");
   font-weight: 900;
   font-style: italic;
 }
 
 @font-face {
   font-family: "Nunito";
-  src: url("/src/fonts/numito/Nunito-Bold.ttf") format("truetype");
+  src: url("/assets/fonts/nunito/Nunito-Bold.ttf") format("truetype");
   font-weight: 700;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Nunito";
-  src: url("/src/fonts/numito/Nunito-BoldItalic.ttf") format("truetype");
+  src: url("/assets/fonts/nunito/Nunito-BoldItalic.ttf") format("truetype");
   font-weight: 700;
   font-style: italic;
 }
 
 @font-face {
   font-family: "Nunito";
-  src: url("/src/fonts/numito/Nunito-ExtraBold.ttf") format("truetype");
+  src: url("/assets/fonts/nunito/Nunito-ExtraBold.ttf") format("truetype");
   font-weight: 800;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Nunito";
-  src: url("/src/fonts/numito/Nunito-ExtraBoldItalic.ttf") format("truetype");
+  src: url("/assets/fonts/nunito/Nunito-ExtraBoldItalic.ttf") format("truetype");
   font-weight: 800;
   font-style: italic;
 }
 
 @font-face {
   font-family: "Nunito";
-  src: url("/src/fonts/numito/Nunito-ExtraLight.ttf") format("truetype");
+  src: url("/assets/fonts/nunito/Nunito-ExtraLight.ttf") format("truetype");
   font-weight: 200;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Nunito";
-  src: url("/src/fonts/numito/Nunito-ExtraLightItalic.ttf") format("truetype");
+  src: url("/assets/fonts/nunito/Nunito-ExtraLightItalic.ttf") format("truetype");
   font-weight: 200;
   font-style: italic;
 }
 
 @font-face {
   font-family: "Nunito";
-  src: url("/src/fonts/numito/Nunito-Italic.ttf") format("truetype");
+  src: url("/assets/fonts/nunito/Nunito-Italic.ttf") format("truetype");
   font-weight: 400;
   font-style: italic;
 }
 
 @font-face {
   font-family: "Nunito";
-  src: url("/src/fonts/numito/Nunito-Light.ttf") format("truetype");
+  src: url("/assets/fonts/nunito/Nunito-Light.ttf") format("truetype");
   font-weight: 300;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Nunito";
-  src: url("/src/fonts/numito/Nunito-LightItalic.ttf") format("truetype");
+  src: url("/assets/fonts/nunito/Nunito-LightItalic.ttf") format("truetype");
   font-weight: 300;
   font-style: italic;
 }
 
 @font-face {
   font-family: "Nunito";
-  src: url("/src/fonts/numito/Nunito-Medium.ttf") format("truetype");
+  src: url("/assets/fonts/nunito/Nunito-Medium.ttf") format("truetype");
   font-weight: 500;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Nunito";
-  src: url("/src/fonts/numito/Nunito-MediumItalic.ttf") format("truetype");
+  src: url("/assets/fonts/nunito/Nunito-MediumItalic.ttf") format("truetype");
   font-weight: 500;
   font-style: italic;
 }
 
 @font-face {
   font-family: "Nunito";
-  src: url("/src/fonts/numito/Nunito-Regular.ttf") format("truetype");
+  src: url("/assets/fonts/nunito/Nunito-Regular.ttf") format("truetype");
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Nunito";
-  src: url("/src/fonts/numito/Nunito-SemiBold.ttf") format("truetype");
+  src: url("/assets/fonts/nunito/Nunito-SemiBold.ttf") format("truetype");
   font-weight: 600;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Nunito";
-  src: url("/src/fonts/numito/Nunito-SemiBoldItalic.ttf") format("truetype");
+  src: url("/assets/fonts/nunito/Nunito-SemiBoldItalic.ttf") format("truetype");
   font-weight: 600;
   font-style: italic;
 }
@@ -116,18 +116,19 @@
 /* IM Fell DW Pica Fonts */
 @font-face {
   font-family: "IMFellDWPica";
-  src: url("/src/fonts/pica/IMFellDWPica-Italic.ttf") format("truetype");
+  src: url("/assets/fonts/pica/IMFellDWPica-Italic.ttf") format("truetype");
   font-weight: 400;
   font-style: italic;
 }
 
 @font-face {
   font-family: "IMFellDWPica";
-  src: url("/src/fonts/pica/IMFellDWPica-Regular.ttf") format("truetype");
+  src: url("/assets/fonts/pica/IMFellDWPica-Regular.ttf") format("truetype");
   font-weight: 400;
   font-style: normal;
 }
 
+/* Theme Variables */
 @theme {
   /* Font families */
   --font-nunito: "Nunito", sans-serif;
