ui: index css fix

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,4 @@
-@import"tailwindcss";
+@import "tailwindcss";
 
 /* Nunito Fonts */
 @font-face {
@@ -115,14 +115,14 @@
 
 /* IM Fell DW Pica Fonts */
 @font-face {
-  font-family: "IMFellDWPica";
+  font-family: "Pica";
   src: url("/assets/fonts/pica/IMFellDWPica-Italic.ttf") format("truetype");
   font-weight: 400;
   font-style: italic;
 }
 
 @font-face {
-  font-family: "IMFellDWPica";
+  font-family: "Pica";
   src: url("/assets/fonts/pica/IMFellDWPica-Regular.ttf") format("truetype");
   font-weight: 400;
   font-style: normal;
@@ -132,7 +132,7 @@
 @theme {
   /* Font families */
   --font-nunito: "Nunito", sans-serif;
-  --font-pica: "IMFellDWPica", serif;
+  --font-pica: "Pica", serif;
   
   /* Color palette */
   --color-midnight: #181D31;
@@ -141,20 +141,7 @@
   --color-linen: #F0E9D2;
 }
 
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
 
 a {
   font-weight: 500;
