ui: filter component addition, mobile sidebar

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -141,6 +141,15 @@
   --color-linen: #F0E9D2;
 }
 
+/* Hide scrollbar but allow scroll */
+.scrollbar-hidden {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none;  /* IE and Edge */
+}
+.scrollbar-hidden::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera */
+}
+
 
 
 a {
